k8s/orders/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: adan762/orders:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8003

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8003
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8003
            initialDelaySeconds: 30
