k8s/orders/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  selector:
    app: orders
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
