k8s/orders/orders-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tinka.local
      http:
        paths:
          - path: /api/orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 8003
